# HH_API

./: README.md  main.py  pyproject.toml
data/: data1.txt  vacancies_file.txt
src/: HeadHunterAPI.py  JSON_saver.py  Menu.py  func.py
tests/: test_HeadHunterAPI.py  test_JSON_saver.py
